<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginOpaco"
    android:fitsSystemWindows="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.gerardo.testfirebase.activity.RegisterActivity"
        tools:showIn="@layout/activity_register">


        <ImageView
            android:id="@+id/imagen"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/edit_usuario_reg"
                android:drawableLeft="@drawable/login_user"
                android:drawableStart="@drawable/login_user"
                android:layout_below="@+id/imagen"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/edit_clave_reg"
                android:drawableLeft="@drawable/login_password"
                android:drawableStart="@drawable/login_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_clave" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_enviar_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registrate"
            android:background="@color/colorLoginButtonOpaco"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"/>

    </LinearLayout>

</ScrollView>